server.tests: Use TSP client in GenericXYDataProviderServiceTest
needs the following fix to fix the FIXME:
https://github.com/eclipse-tracecompass-incubator/org.eclipse.tracecompass.incubator/issues/236

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>